--- a/shoe-store-client/src/pages/styles/UserPage.module.scss
+++ b/shoe-store-client/src/pages/styles/UserPage.module.scss
@@ -1,9 +1,11 @@
 .userPageWrapper {
+  @apply flex items-center flex-col;
+
   span {
-    @apply block;
+    @apply block text-lg ml-3;
   }
 
   .logOutBtn {
-    @apply w-fit h-fit bg-backgroundSecond px-4 py-2 rounded-full;
+    @apply w-fit h-fit bg-backgroundSecond px-4 py-2 rounded-full hover:scale-105 hover:shadow-md transition-all mt-5;
   }
 }
